Basic fix to keep all text visible

--- a/src/sass/edu-benefits.scss
+++ b/src/sass/edu-benefits.scss
@@ -77,7 +77,7 @@ ul.claim-list{
 }
 
 .edu-benefits-pre {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 .edu-benefits-list {
   margin-top: 0;
@@ -212,4 +212,3 @@ ul.claim-list{
     outline: none;
   }
 }
-
